tests/fail/for_wrong_valued_both.tig
for i := nil to nil do i
